Fix The composite key of domains should be immutable #154
Former-commit-id: 4abb8e0668fb714704312ccf9d11e59be0463d86